--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@angular/router": "19.0.1",
     "core-js": "^2.4.1",
     "cors": "^2.8.5",
-    "express": "^4.16.2",
+    "express": "^4.21.2",
     "moment": "^2.22.2",
     "rxjs": "6.5.4",
     "tslib": "^2.0.0",
@@ -38,7 +38,7 @@
     "@angular/cli": "^19.0.2",
     "@angular/compiler-cli": "19.0.1",
     "@angular/language-service": "19.0.1",
-    "@types/express": "^4.0.39",
+    "@types/express": "^4.17.21",
     "@types/jasmine": "~3.8.0",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^12.11.1",
@@ -51,6 +51,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "ts-node": "~3.2.0",
-    "typescript": "5.6.3"
+    "typescript": "^5.6.3"
   }
 }
