--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compileOnSave": false,
   "compilerOptions": {
     "module": "es2020",
-    "esModuleInterop": true,
+    "esModuleInterop": true,    
+    "allowSyntheticDefaultImports": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
