--- a/server/server.tsconfig.json
+++ b/server/server.tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "lib": ["es2017"],
-    "allowSyntheticDefaultImports": true    
+    "lib": ["es2017"]
   }
 }
